--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
+<!-- Lalo-->
+<!-- Silvi-->
+<!--Mario-->
+
 <body>
-<img src="assets/icons/podcastIcon.svg" alt="">
+
+    <header>
+        <nav  class="d-flex w-100" style= "height: 70px;">
+            <div class= "w-50" style="background-color: red;" > 
+                
+            </div>
+            <div class="w-50" style="background-color: navy;" >
+
+            </div>
+
+        </nav>
+
+
+
+
+
+    </header>
+
 </body>
 </html>
