--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <!-- Lalo-->
@@ -14,20 +16,18 @@
 <body>
 
     <header>
-        <nav  class="d-flex w-100" style= "height: 70px;">
-            <div class= "w-50" style="background-color: red;" > 
-                
+        <nav  class="d-flex w-100">
+            <div class= "w-50 d-flex a-items-center"> 
+                <i class="fas fa-bars"></i>
+                <img src="assets/icons/devIcon.svg" alt="" style="height: 50px;">
             </div>
-            <div class="w-50" style="background-color: navy;" >
-
+            <div class="w-50 d-flex a-items-center jc-flex-end">
+                <i class="fas fa-search"></i>
+                <img src="assets/icons/notifications.svg" alt="">
+                <img src="assets/icons/homeIcon.svg" alt="">
+                <img class="b-radius-100" src="assets/images/usuarioLogNav.webp" alt="" style="height: 50px;">
             </div>
-
         </nav>
-
-
-
-
-
     </header>
 
 </body>
