Estructura del html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
 
+    <!--header-->
     <header>
         <nav  class="d-flex w-100">
             <div class= "w-50 d-flex a-items-center"> 
@@ -29,6 +30,35 @@
             </div>
         </nav>
     </header>
+    <!--END Header-->
+
+    <!--Main-->
+    <main class="d-flex">
+        <!--Aside Left-->
+        <aside>
+
+        </aside>
+
+        <section>
+            <!--Post titles-->
+            <div>
+
+            </div>
+            <!--Cards-->
+        </section>
+
+        <!--Aside Right-->
+        <aside>
+
+        </aside>
+    </main>
+    <!--END Main-->
+
+    <!--Footer-->
+    <footer>
+
+    </footer>
+
 
 </body>
 </html>
