--- a/index.html
+++ b/index.html
@@ -39,12 +39,32 @@
 
         </aside>
 
-        <section>
+        <section class="d-flex w-100">
             <!--Post titles-->
-            <div>
+            <nav  class="d-flex w-100">
+                <div class= "w-50 d-flex a-items-center">
+                    <h3>Posts</h3>
+                </div> 
+                <div class="w-50 d-flex a-items-center jc-flex-end">   
+                    <select name="Feed" id="">
+                        <option value="A">
+                            1
+                        </option>
+                    </select>
+                </div>            
+            </nav>
+            <!--Cards-->
+
+            <div class="main-card d-flex ">
+                <div class="head-img"></div>
+                <div class="main-text">
+
+                </div>
+
+               
 
             </div>
-            <!--Cards-->
+
         </section>
 
         <!--Aside Right-->
