--- a/index.html
+++ b/index.html
@@ -35,7 +35,21 @@
     <!--Main-->
     <main class="d-flex">
         <!--Aside Left-->
-        <aside>
+        <aside class="l-aside">
+            <div class="l-aside-prim">
+                <ul>
+                    <li><a href="#"><img src="assets/icons/homeIcon.svg">  Home</a></li>
+                    <li><a href="#"><img src="assets/icons/readingListIcon.svg">  Reading list</a></li>
+                    <li><a href="#"><img src="assets/icons/instagram.svg">  Listings</a></li>
+                    <li><a href="#"><img src="assets/icons/podcastIcon.svg">  Podcasts</a></li>
+                    <li><a href="#"><img src="assets/icons/videosIcon.svg">  Videos</a></li>
+                    <li><a href="#"><img src="assets/icons/tagsIcon.svg">  Tags</a></li>
+                    <li style="margin-top: 10px; margin-left: 30px;">More...</a></li>
+                </ul>
+                
+            </div>
+
+
 
         </aside>
 
