Avance left aside

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 
             </div>
             <div class="l-aside-ter ">
-                <div class="imgshop " style="background-image: url(assets/images/devShop.jpg);">
-                     
+                <div class="imgshop ">
+                     <img src="assets/images/devShop.jpg">
                 </div>
                 <div class="imgshop">
                     <h1>Get The Daisy DEV Fall Jacket</h1>
