--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         </aside>
 
-        <section class="d-flex w-100">
+        <section class="d-flex w-100 f-dir-column">
             <!--Post titles-->
             <nav  class="d-flex w-100">
                 <div class= "w-50 d-flex a-items-center">
@@ -114,14 +114,26 @@
             </nav>
             <!--Cards-->
 
-            <div class="main-card d-flex ">
-                <div class="head-img"></div>
+            <div class="main-card d-flex w-100 f-dir-column">
+                <div class="head-img d-flex"></div>
                 <div class="main-text">
-
+                    <div class="card-post">
+                        <h2>Lorem ipsum dolor sit amet.</h2>
+                        <h5>Lorem, ipsum dolor.</h5>
+                        <h5>Lorem, ipsum dolor.</h5>
+                    </div>
+                    <div class="card-comment">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis enim facilis placeat nam natus, aliquam iure illum labore, autem quam dolorum porro voluptas delectus architecto?</p>
+                    </div>
                 </div>
+            </div>
 
-               
-
+            <div class="card d-flex f-dir-column">
+                <h5>Lorem ipsum dolor sit.</h5>
+                <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                <p>Lorem ipsum dolor sit.</p>
+                <p>Lorem ipsum dolor sit.</p>
             </div>
 
         </section>
