Agrego VARIABLES y Footer

--- a/index.html
+++ b/index.html
@@ -146,8 +146,44 @@
     <!--END Main-->
 
     <!--Footer-->
-    <footer>
-
+    <footer >
+        <div>
+            <a href="">Home</a>
+            <a href="">Reading List</a>
+            <a href="">Listings</a>
+            <a href="">Podcasts</a>
+            <a href="">Videos</a>
+            <a href="">Tags</a>
+            <a href="">Code of Conduct</a>
+            <a href="">FAQ</a>
+        </div>
+        <div>
+            <a href="">DEV Shop</a>
+            <a href="">Sponsors</a>
+            <a href="">About</a>
+            <a href="">Privacy policy</a>
+            <a href="">Terms of use</a>
+            <a href="">Contact</a>
+            <a href="">Write a post</a>
+        </div>
+        <div class="social-media">
+            <img src="assets/icons/twitter.svg" alt="">
+            <img src="assets/icons/facebook.svg" alt="">
+            <img src="assets/icons/github.svg" alt="">
+            <img src="assets/icons/instagram.svg" alt="">
+            <img src="assets/icons/twitch.svg" alt="">
+        </div>
+        <div>
+            <p><b>DEV Community</b> – A constructive and inclusive social network for software developers. With you every step of your journey.</p>
+        </div>
+        <div>
+            <p>Built on <b>Forem</b> — the <b>open source</b> software that powers <b>DEV</b> and other inclusive communities.</p>
+        </div>
+        <div><p>Made with love and <b>Ruby on Rails</b>. DEV Community © 2016 - 2021.</p></div>
+        <div>
+            <img src="assets/images/hojita.svg" alt="">
+        </div>
+        <img class="perezoso" src="assets/images/footerPerezoso.png" alt="">
     </footer>
 
 
