--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!--header-->
     <header>
         <nav  class="d-flex w-100">
-            <div class= "w-50 d-flex a-items-center"> 
+            <div class= " lefthead w-50 d-flex a-items-center"> 
                 <i class="fas fa-bars"></i>
                 <img src="assets/icons/devIcon.svg" alt="" style="height: 50px;">
             </div>
-            <div class="w-50 d-flex a-items-center jc-flex-end">
+            <div class=" righthead w-50 d-flex a-items-center jc-flex-end">
                 <i class="fas fa-search"></i>
                 <img src="assets/icons/notifications.svg" alt="">
                 <img src="assets/icons/homeIcon.svg" alt="">
