--- a/index.html
+++ b/index.html
@@ -138,9 +138,62 @@
 
         </section>
 
-        <!--Aside Right-->
+        <!--rightAside-->
         <aside>
-
+            <div class="right-cards d-flex">
+                <header>
+                    <h3><b>Listings</b></h3>
+                    <a href="">See all</a>
+                </header>
+                <ul>
+                    <li>
+                        <div>
+                            <p>How to Test Services when You have the keys to the Castle</p>
+                            <span>
+                                event
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>Build your landing page in style with Mark (landing Page template</p>
+                            <span>
+                                forsale
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>Workflow to build Static Website - ebook (soon release)</p>
+                            <span>
+                                education
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>SigNoz - Open Source alternative to DataDOg</p>
+                            <span>
+                                products
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p>Meet iOS community with informal interviews</p>
+                            <span>
+                                misc
+                            </span>
+                        </div>
+                    </li>
+                    <li class="card-footer">
+                        <div>
+                            <p>Create a Listing</p>    
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            
         </aside>
     </main>
     <!--END Main-->
