--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 <img class="b-radius-100" src="assets/images/usuarioLogNav.webp" alt="" style="height: 40px; margin-right: 10%;"
                 >
             </div>
-        </nav>
+        </nav>  
     </header>
     <!--END Header-->
 
     <!--Main-->
-    <main class="d-flex">
+    <main class=" main d-flex">
 
             
         <!--Aside Left-->
