Se crea el query para desktop del right aside

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <i class="far fa-bell"></i>
                 <img class="b-radius-100" src="assets/images/usuarioLogNav.webp" alt="" style="height: 40px; margin-right: 10%;"
                 >
+                
             </div>
         </nav>
     </header>
@@ -54,6 +55,9 @@
                             </g>
                         </svg>           
                     </span>Listings</a></li>
+
+
+
                     <li><a href="#"><img src="assets/icons/podcastIcon.svg">  Podcasts</a></li>
                     <li><a href="#"><img src="assets/icons/videosIcon.svg">  Videos</a></li>
                     <li><a href="#"><img src="assets/icons/tagsIcon.svg">  Tags</a></li>
@@ -102,19 +106,11 @@
 
         <section class="d-flex w-100 f-dir-column">
             <!--Post titles-->
-<<<<<<< HEAD
-            <nav  class="d-flex w-100">
-                <div class= "w-50 d-flex a-items-center m-sides-10">
-                    <h3>Posts</h3>
-                </div> 
-                <div class="w-50 d-flex a-items-center jc-flex-end m-sides-10">   
-=======
             <nav  class="d-flex w-100" style="background-color:#EEF0F1">
                 <div class= "w-50 d-flex a-items-center">
                     <h3>Posts</h3>
                 </div> 
                 <div class=" listbox w-50 d-flex a-items-center jc-flex-end">   
->>>>>>> 5dde6c54f1927175ed699b99377dd273e35051a6
                     <select name="Feed" id="">
                         <option value="A">
                             Feed
@@ -506,7 +502,7 @@
         </section>
 
         <!--rightAside-->
-        <aside>
+        <aside id="right-aside">
             <div class="right-cards d-flex">
                 <header>
                     <h3><b>Listings</b></h3>
