Se coloca padding al footer

--- a/index.html
+++ b/index.html
@@ -650,8 +650,8 @@
     <!--END Main-->
 
     <!--Footer-->
-    <footer >
-        <div>
+    <footer>
+        <div id="first-div" >
             <a href="">Home</a>
             <a href="">Reading List</a>
             <a href="">Listings</a>
