--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav  class="d-flex w-100" >
             <div class= " lefthead w-100 d-flex a-items-center"> 
                 <i class="fas fa-bars ml-20"></i>
-                <img src="assets/icons/devIcon.svg" alt="" id="logo-nav-img" style="height: 50px;" class="ml-20 mr-20">
+                <img src="assets/icons/devIcon.svg" alt="" style="height: 50px; margin-left: 6vw;" class="ml-20 mr-20">
                 <input style="width: 300px;" class="d-none" id="search-bar" type="text" placeholder="Search..">
             </div>
             <div class=" righthead w-50 d-flex a-items-center jc-flex-end" id="profile-img">
@@ -571,14 +571,14 @@
                 </ul>
             </div>
             <div class="right-cards d-flex">
-                <header>
+                <header> <!--Creacion de las seccion news-->
                     <h3><b>#news</b></h3>
                 </header>
                 <ul>
                     <li>
                         <div>
                             <p>I've Joined Forem as a Principal SRE</p>
-                            <span>
+                            <span> <!--Creacion del boton news-->
                                 <button>
                                     New
                                 </button>
@@ -651,7 +651,7 @@
 
     <!--Footer-->
     <footer>
-        <div id="first-div" >
+        <div id="first-div">
             <a href="">Home</a>
             <a href="">Reading List</a>
             <a href="">Listings</a>
@@ -669,7 +669,7 @@
             <a href="">Terms of use</a>
             <a href="">Contact</a>
             <a href="">Write a post</a>
-        </div>
+        </div> <!--Social media seccion-->
         <div class="social-media">
             <img src="assets/icons/twitter.svg" alt="">
             <img src="assets/icons/facebook.svg" alt="">
@@ -684,7 +684,7 @@
             <p>Built on <b>Forem</b> — the <b>open source</b> software that powers <b>DEV</b> and other inclusive communities.</p>
         </div>
         <div><p>Made with love and <b>Ruby on Rails</b>. DEV Community © 2016 - 2021.</p></div>
-        <div>
+        <div> <!--Imagenes del footer-->
             <img src="assets/images/hojita.svg" alt="">
         </div>
         <img class="perezoso" src="assets/images/footerPerezoso.png" alt="">
