Modifique los dos left aside de ambas partes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <li><a href="#"><img src="assets/icons/podcastIcon.svg">  Podcasts</a></li>
                     <li><a href="#"><img src="assets/icons/videosIcon.svg">  Videos</a></li>
                     <li><a href="#"><img src="assets/icons/tagsIcon.svg">  Tags</a></li>
-                    <li style="margin-top: 10px; margin-left: 30px;">More...</a></li>
+                    <li><a style="margin-top: 10px; margin-left: 30px;">More...</a></li>
                 </ul>
                 
             </div>
