--- a/postInside.html
+++ b/postInside.html
@@ -57,11 +57,11 @@
                     <img src="assets/icons/unicorn.svg">
                     <span> 3</span>
                 </div>
-                <div class="icon">
+                <div class="saved">
                     <img src="assets/icons/saved.svg">
                     <span>24</span>
                 </div>
-                <div class="icon">
+                <div class="ellipsis">
                     <i class="fas fa-ellipsis-h"></i>  
                 </div>                      
             </div>
