--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav  class="d-flex w-100" >
             <div class= " lefthead w-100 d-flex a-items-center"> 
                 <i class="fas fa-bars ml-20"></i>
-                <img src="assets/icons/devIcon.svg" alt="" style="height: 50px; margin-left: 6vw;" class="ml-20 mr-20">
+                <img src="assets/icons/devIcon.svg" id="logo-nav-img" alt="" style="height: 50px;" class="ml-20 mr-20">
                 <input style="width: 300px;" class="d-none" id="search-bar" type="text" placeholder="Search..">
             </div>
             <div class=" righthead w-50 d-flex a-items-center jc-flex-end" id="profile-img">
